<resources>
    <string name="app_name">EnuguSOMLAPP</string>

    <string name="registration">Out Patient Registration Form</string>
    <string name="button_register">Register Patient</string>
    <string name="button_update">View Registered Patient</string>
    <string name="uploadButton">Upload Saved Data</string>
    <string name="textaction">Choose an action</string>
    <string name="searchbutton">Search Patient</string>
    <string name="submitbtn">Save Data</string>
    <string name="cancelbtn">Cancel</string>

    <string name="sname">Surname</string>
    <string name="fname">Firstname</string>
    <string name="onames">Middle/Other Names</string>

    <string name="sex_prompt">Gender</string>
    <string-array name="sex_array">
        <item>Choose Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="dob">Date of Birth</string>
    <string name="phone">Telephone</string>

    <string name="maritalstatus_prompt">Marital Status</string>
    <string-array name="maritalstatus_array">
        <item>Choose Marital Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Separated</item>
        <item>Widowed</item>
        <item>Widower</item>
        <item>Domestic</item>
    </string-array>

    <string name="occupation">Occupation</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="genotype">GenoType</string>

    <string name="HIVstatus_prompt">HIV Status</string>
    <string-array name="HIVstatus_array">
        <item>Choose HIV Status</item>
        <item>Negative</item>
        <item>Positive</item>
    </string-array>

    <string name="anyailment">Ailment</string>

    <string name="firstpregnancy_prompt">Is this your first pregnancy?</string>
    <string-array name="firstpregnancy_array">
        <item>Is this your first pregnancy?</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="nochildren">No. of Children</string>
    <string name="normalbirth">How many normal births?</string>
    <string name="cesarean">How many cesarean sections?</string>
    <string name="tbattendance">How many traditional birth attendances?</string>
    <string name="tbacontact">Traditional Birth Attendant (name, address, phone)</string>

    <string name="anyfamplanning_prompt">Have you done family planning before?</string>
    <string-array name="anyfamplanning_array">
        <item>Have you done family planning before?</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="needfamplanning_prompt">Do you need family planning?</string>
    <string-array name="needfamplanning_array">
        <item>Do you need family planning?</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="nokfullname">Next-of-kin Fullname</string>
    <string name="nokphone">Next-of-kin Phone</string>

    <string name="nokrelationship_prompt">Relationship to Next-of-kin</string>
    <string-array name="nokrelationship_array">
        <item>Relationship to Next-of-kin</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Brother</item>
        <item>Husband</item>
        <item>Wife</item>
        <item>Sister</item>
        <item>Uncle</item>
        <item>Aunt</item>
        <item>Niece</item>
        <item>Nephew</item>
        <item>Cousin</item>
    </string-array>


    <string name="visitid">Health Facility Visit</string>
    <string name="openOnGooglemap">View Facility On Map</string>
    <string name="addvisit">Add Visit</string>
    <string name="healthfacility">Health Facility Name</string>
    <string name="healthfacilitystreet">Facility Street Address</string>
    <string name="citystate_prompt">Facility State</string>
    <string-array name="citystate_array">
        <item>Facility City/State</item>
        <item>Abuja Federal Capital Territory</item>
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nassarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
    </string-array>
    <string name="healthfacilityphone">Facility Telephone</string>
    <string name="visitreason">Reason for visit</string>
    <string name="consultantdoctor">Doctor(Name and Contact)</string>
    <string name="collecteditems">List Items Collected</string>
    <string name="comments">Remarks/Comments</string>
    <string name="next_appointment">Next Appointment Date</string>

    <string name="childregistration">Child Registration Form</string>
    <string name="childregistrationOP">PatientCode: </string>
    <string name="fullname">Full Names</string>
    <string name="openchilddata">View Children</string>
    <string name="openmotherddata">View Main Patient</string>

    <string name="successdesc">success image</string>
    <string name="successtitle">Data Saved Successfully</string>
    <string name="okbtn">Okay, Done!</string>

    <string name="searchlocaldbbtn">Search Local \nDatabase</string>
    <string name="searchcentraldbbtn">Search Online \nCentral Database</string>
    <string name="startsearchbtn">Search</string>
    <string name="cancelsearchbtn">Cancel</string>
    <string name="search_instruction">Enter Patient\'s Code</string>
    <string name="searchbox">Patient Code</string>

    <string name="profiletitle">Patient Code</string>
    <string name="cancel2homebutton">Cancel</string>
    <string name="addchild">Add Child</string>
    <string name="editdata">Edit</string>
    <string name="deldata">Del</string>
    <string name="viewvisit">Visit History</string>

    <string name="childvisit">Out Patient Visit Form</string>
    <string name="title_activity_login">Authentication Required</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_pasword">Password</string>
    <string name="Authenticate">Authenticate</string>
    <string name="fgpassword">Forgot password?</string>

    <!-- Strings related to menu -->
    <string name="home">Home</string>
    <string name="menu">Menu</string>

    <!-- Strings related to api url and send sms -->
    <string name="enterphpone">Enter Patient Phone</string>
    <string name="resendsms">Resend SMS</string>


    <string name="exitApp">Exit APP</string>
    <string name="title_activity_hfgmap">Healthcare Facility Location</string>
    <string name="close_gmapBTN">Close Map</string>

</resources>
