<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#9adcf7"
    tools:context="com.enugusomlapp.enugusomlapp.VisitsActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#9adcf7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="#e8e8e7"
            android:gravity="center">

            <TextView
                android:id="@+id/child_visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/childvisit"
                android:textColor="#2582C5"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#9bdcf7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/OP_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#cf0306"
                    android:textSize="18sp"
                    android:layout_marginBottom="-5dp"
                    android:textStyle="bold" />
            </LinearLayout >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:gravity="center"
                android:layout_marginTop="-10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/OP_names"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout >


            <EditText
                android:id="@+id/healthfacility"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="#f3f3f3"
                android:maxLength="50"
                android:hint="@string/healthfacility"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />


            <EditText
                android:id="@+id/healthfacility_street"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:maxLength="160"
                android:background="#f3f3f3"
                android:hint="@string/healthfacilitystreet"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <Spinner
                android:id="@+id/citystate"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="5dp"
                android:entries="@array/citystate_array"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:prompt="@string/citystate_prompt"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/healthfacility_tel"
                android:inputType="number"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:maxLength="12"
                android:background="#f3f3f3"
                android:hint="@string/healthfacilityphone"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <EditText
                android:id="@+id/visit_reason"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="#f3f3f3"
                android:maxLength="100"
                android:hint="@string/visitreason"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <EditText
                android:id="@+id/consultant_doctor"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="#f3f3f3"
                android:hint="@string/consultantdoctor"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <EditText
                android:id="@+id/collected_items"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="#f3f3f3"
                android:hint="@string/collecteditems"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <EditText
                android:id="@+id/comments"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="#f3f3f3"
                android:hint="@string/comments"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <EditText
                android:id="@+id/next_appointment"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="#f3f3f3"
                android:hint="@string/next_appointment"
                android:inputType="date"
                android:paddingLeft="5dp"
                android:onClick="onClick"
                android:paddingRight="5dp" />


            <!--<ProgressBar
                android:id="@+id/progress_Bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                />-->

        </LinearLayout>



        <!-- SUBMIT AND CANCEL BUTTONS SECTION-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!--submit button -->
            <Button
                android:id="@+id/Vsubmit_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="120dp"
                android:layout_height="38dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_xml_btn_green"
                android:onClick="onClick"
                android:text="@string/submitbtn"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!--cancel button -->
            <Button
                android:id="@+id/Vcancel_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="120dp"
                android:layout_height="38dp"
                android:background="@drawable/selector_xml_btn_red"
                android:onClick="onClick"
                android:text="@string/cancelbtn"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout >


    </LinearLayout>



</ScrollView>