<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    tools:context="com.enugusomlapp.enugusomlapp.LoginActivity">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:paddingBottom="15dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/homelogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@android:string/ok"
            app:srcCompat="@mipmap/loginlogo" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/signinEmail"
        android:drawableStart="@mipmap/account"
        android:drawableLeft="@mipmap/account"
        android:hint="@string/prompt_email"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:drawablePadding="5dp"
        android:textColorHint="#999"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signinPassword"
        android:drawableLeft="@mipmap/lock"
        android:drawableStart="@mipmap/lock"
        android:hint="@string/prompt_pasword"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:drawablePadding="5dp"
        android:textColorHint="#999"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Authenticate"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/signinBTN"
        android:background="@drawable/selector_xml_btn_yellow"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fgpassword"
        android:id="@+id/forgotpassword"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"
        android:onClick="onClick"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="78dp"
        android:layout_height="66dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/poweredbyomstok2"
        android:contentDescription="@string/okbtn" />

</LinearLayout>
</ScrollView>