<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#f7f7f7"
android:orientation="vertical"
android:scrollbarAlwaysDrawVerticalTrack="true"
tools:context="com.enugusomlapp.enugusomlapp.SuccessActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="center"
       >

        <TextView
            android:id="@+id/success_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/successtitle"
            android:textColor="#06ca20"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/successdesc"
            android:src="@mipmap/successful" />

        <TextView
            android:id="@+id/success_msg"
            android:layout_width="269dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2.96"
            android:background="#ffffff"
            android:padding="15dp"
            android:textColor="#050505"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/success_okbtn"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/okbtn"
            android:textColor="#f20303"
            android:padding="20dp"
            android:textStyle="bold"
            android:typeface="normal"
            android:textSize="20sp" />

    </LinearLayout>
    </ScrollView>
