<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@mipmap/search_bg"
android:orientation="vertical"
android:padding="40dp"
android:weightSum="1"
tools:context="com.enugusomlapp.enugusomlapp.SearchActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="120dp"
        android:layout_gravity="center"
        >

    <TextView
    android:id="@+id/action"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:textStyle="bold"
    android:layout_marginTop="10dp"
    android:text="@string/search_instruction"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="#FFFFFF"
    android:textSize="20sp"/>

    <EditText
        android:id="@+id/search_box"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/user_profile_image_background_ash"
        android:drawableLeft="@mipmap/account"
        android:drawablePadding="5dp"
        android:drawableStart="@mipmap/account"
        android:hint="@string/searchbox"
        android:maxLength="8"
        android:textColor="#000000"
        android:textColorHint="#049933" />

    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />


<!-- SUBMIT AND CANCEL BUTTONS SECTION-->
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:gravity="center"
    android:orientation="horizontal">

    <!--submit button -->
    <Button
        android:id="@+id/submit_searchbutton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_xml_btn_green"
        android:onClick="onClick"
        android:text="@string/startsearchbtn"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!--cancel button -->
    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_xml_btn_red"
        android:onClick="onClick"
        android:text="@string/cancelsearchbtn"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        />
</LinearLayout >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:contentDescription="@android:string/ok"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/poweredbyomstok2"
        />



</LinearLayout>
</ScrollView>